--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "frontend",
+  "name": "contact-form-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "axios": "^1.6.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -26,5 +28,11 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.7",
     "vite": "^6.3.5"
-  }
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "author": "Your Name",
+  "license": "MIT",
+  "description": "Frontend for contact form application"
 }
